--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -335,6 +335,10 @@
     <string name="help_time">Print the current time with the given format
         \n\nUsage:
         \n$ time [index] (index means the index of the desired time_format</string>
+    <string name="help_timer">Sets a timer with the given value.
+        \n\nUsage
+        \n$ timer 5s/5m (5s is 5 seconds, 5m is 5 minutes)
+    </string>
     <string name="help_tuixt">Open the text editor.
         \n\nUsage:
         \n$ tuixt [textFile]
